# frankyzha.github.io

./: .gitignore  DEVELOPMENT.md  Dockerfile  _config.yml  package.json
CollarAI/: .gitignore  README.md  hermes.example.yaml  pyproject.toml
CollarAI/deploy/: duke_gemma_server.sbatch  duke_inference_tunnel.sh
CollarAI/docs/: GENERALIZATION_PLAYBOOK.md  WEB_DEMO.md
CollarAI/scripts/: install_macos_services.py  provision_duke_inference.py  validate_pitchbook_queries.py  validate_semantic_router.py
CollarAI/skills/company-screening/: SKILL.md
CollarAI/src/collarai/: __init__.py  access.py  analytics.py  browser.py  chrome.py  cli.py  config.py  credentials.py  errors.py  evidence.py  handoff.py  inference.py  mcp_server.py  models.py  pitchbook_auth.py  policy.py  query.py  recording.py  service.py  stagehand_browser.py  web_api.py
CollarAI/src/collarai/adapters/: __init__.py  base.py  pitchbook.py  toy.py
CollarAI/src/collarai/toy/: __init__.py  app.py
CollarAI/src/collarai/toy/static/: index.html  script.js  styles.css
CollarAI/tests/: test_analytics.py  test_browser_e2e.py  test_browser_session.py  test_credentials.py  test_evidence.py  test_mcp_schema.py  test_models_policy.py  test_pitchbook_adapter.py  test_query.py  test_recording.py  test_toy_api.py
_data/: cv.json  navigation.yml
_includes/: archive-single.html  author-profile.html  head.html  masthead.html  publication-entry.html  scripts.html
_layouts/: archive.html  cv-layout.html  single.html
_pages/: about.md  contact.md  cv.md  demo.md  portfolio.html  publications.html  (+1 more)
(+45 files in other folders)
